<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    tools:context="com.global.labs.ui.Result_Add">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#FFFFFF"
        android:padding="10dp"
        android:text="@string/resultnotfound"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#646464" />

    <TextView
        android:id="@+id/dousknow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#FFFFFF"
        android:padding="10dp"
        android:text="@string/missingvanue"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#646464" />


    <TextView
        android:id="@+id/goback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:text="@string/searchmore"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/standard" />


</LinearLayout>
