<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/test"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center|bottom"
    android:orientation="vertical"
    tools:context="com.global.labs.ui.NavigationActivity$PlaceholderFragment">

    <EditText
        android:id="@+id/search_box"
        android:layout_width="@dimen/navigation_drawer_width"
        android:layout_height="@dimen/sixty"
        android:layout_marginBottom="80dp"
        android:background="@drawable/roundstyle"
        android:drawableLeft="@drawable/location"
        android:gravity="center"
        android:hint="@string/Searchsportsvenue"
        android:padding="10dp" />

    <Button
        android:id="@+id/seacrhbutton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:background="@drawable/roundstyleddefalt"
        android:padding="10dp"
        android:text="@string/Search"
        android:textColor="@color/common_signin_btn_dark_text_default" />

    <TextView
        android:id="@+id/advance_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/AdvSearch"
        android:textColor="@color/common_signin_btn_dark_text_default"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>