<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C0C0C0">

    <include
        android:id="@+id/custumactionbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/custumactionbar"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp"
        tools:context="com.global.labs.ui.AdvaceSearch">


        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/one"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/roundstyle"
            android:padding="10dp">

            <Spinner
                android:id="@+id/cityspiner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:padding="10dp"
            android:text="@string/two"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/roundstyle"
            android:padding="10dp">

            <Spinner
                android:id="@+id/sportsspiner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <TextView
            android:id="@+id/searchtv"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:background="@drawable/roundstyleddefalt"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/Search"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/common_signin_btn_dark_text_default" />


    </LinearLayout>

</RelativeLayout>
